# Luminous-Engine

./: CMakeLists.txt  README.md  如何构建.txt
glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.4/docs/: Makefile  cmake_install.cmake
glfw-3.4/src/: Makefile  cmake_install.cmake  glfw3.pc
include/glad/: glad.h
src/: camera.c  camera.h  example.c  file_read.c  file_read.h  glad.c  input.c  input.h  lum_camera.c  lum_camera.h  lum_file_read.c  lum_input.c  lum_input.h  lum_input_codes.h  lum_math2d.c  lum_math2d.h  lum_quad.c  lum_quad.h  lum_renderer.c  lum_renderer.h  lum_renderer2d.c  lum_renderer2d.h  lum_shader.c  lum_shader.h  lum_text_renderer.h  lum_texture.c  lum_texture.h  lum_time.c  lum_time.h  lum_transform.c  lum_transform.h  lum_window.c  lum_window.h  main.c  math2d.c  quad.c  quad.h  renderer.c  renderer.h  renderer2d.c  (+9 more)
src/shaders/: fragment.shader  sprite.frag  sprite.vert  text_renderer_vertex.shader  vertex.shader
